--- a/common/styles/_comic-reader.scss
+++ b/common/styles/_comic-reader.scss
@@ -21,11 +21,10 @@
     }
 
     .comic-reader__progress {
-        background-color: $offWhite;
         height: fit-content;
         width: 100%;
         transform: translateX(-100%);
-        transition: transform 0.25s ease-out;
+        transition: transform 0.25s ease-out, color 300ms ease-out;
         z-index: 1;
         overflow: hidden;
 
@@ -40,12 +39,12 @@
             align-items: center;
             height: 100%;
             padding: 0 0.4em;
-            background-color: $softGreen;
             transform: translateY(100%);
-            transition: transform 0.5s ease-in 0.25s;
+            transition: transform 0.5s ease-in 0.25s, background-color 300ms ease-out 0.5s;
 
             &.comic-reader__progress--content-wrapper-visible {
                 transform: translateY(0);
+                background-color: rgba(0, 0, 0, 0);
             }
 
             .comic-reader__progress--close {
@@ -53,52 +52,62 @@
                 margin: 5px;
                 padding: 0 0.4em;
                 cursor: pointer;
+                transition: color 300ms ease-out;
 
                 &:hover {
-                    color: $softGreen;
-                    background-color: $offWhite;
+                    color: $tan;
                 }
             }
         }
 
         &.comic-reader__progress--10percent {
             transform: translateX(-90%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--20percent {
             transform: translateX(-80%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--30percent {
             transform: translateX(-70%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--40percent {
             transform: translateX(-60%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--50percent {
             transform: translateX(-50%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--60percent {
             transform: translateX(-40%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--70percent {
             transform: translateX(-30%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--80percent {
             transform: translateX(-20%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--90percent {
             transform: translateX(-10%);
+            background: linear-gradient(to left, rgba(0, 0, 0, 0), $tan 15%);
         }
 
         &.comic-reader__progress--100percent {
             transform: translateX(0);
+            background: inherit;
         }
     }
 
@@ -156,14 +165,12 @@
                 padding: 0 2vw;
                 height: 45px;
                 color: $offWhite;
-                text-decoration: underline;
-                text-underline-offset: 0.1em;
-                transition: text-underline-offset 300ms ease-in-out, transform 300ms ease-in-out;
+                transition: color 300ms ease-out, transform 300ms ease-in-out;
+
 
                 &:hover {
-                    // color: $rust;
-                    text-underline-offset: 0.4em;
-                    transform: translateY(-4px);
+                    color: $tan;
+                    transform: translateY(-2px);
                 }
 
                 &.comic-reader__nav-button--disabled {
@@ -183,13 +190,13 @@
                 margin: 0 1vw;
                 height: 45px;
                 color: $offWhite;
-                background-color: $softGreen;
+                background-color: rgba(0, 0, 0, 0);
                 border: solid 1px $offWhite;
                 border-radius: 2px;
                 transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
 
                 &:hover {
-                    background-color: $lightGreen;
+                    background-color: rgba(255, 255, 255, 0.1);
                 }
             }
         }
